# KazSpell

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
data/processed/: Mynau appak' duniie - O.Bokiei.txt  ekinshi_bolma_-_quanysh_shonbai.txt  Ілияс_Есенберлин_Көшпенділер_Алмас.txt  Ілияс_Есенберлин_Көшпенділер_Жанталас.txt  Ілияс_Есенберлин_Көшпенділер_Қаһар.txt  А.Экзюпери - Кішкентай ханзада.txt  Ави Йориш - Инноватор бол.txt  Аласапыран - Мұхтар Мағауин.txt  Арпалыс. Волоколамск тас жолы.txt  Атом әдеттер - Джеймс Клир.txt  Ақ_лала_гүлдер_өлкесі_Финляндия_Г_Петров_.txt  Ақан сері - 1-кітап.txt  Ақан сері - 2-кітап.txt  Б.Мұқай - Өмірзая.txt  Б_Соқпақбаев_Өлгендер_қайтып_келмейді.txt  Бауыржан Момышұлы - Ұшқан ұя.txt  Бақытжан Бұқарбай - Күміс кітап.txt  Д.Исабеков - Қарғын.txt  Д_Клейсон_Ежелгі_Вавилондағы_ең_бай_адам.txt  Д_Сэлинджер_Жар_жағалаған_жалғыз.txt  Дайағашшы.txt  Джен Синсеро - Сен мықтысың.txt  Джон_Кехо_Түйсігіңмен_ойлай_біл.txt  Дос_табу_және_адамдарға_ықпал_ету_өнері.txt  Ерік-жігер - Рой Баумайстер.txt  Ж.Аймауытов - Ақбілек.txt  Жасампаз жандардың 7 дағдысы.txt  Жолға шық, жол саған көрінеді.txt  Жусан иісі.txt  Кемел адам - Қайрат Жолдыбай.txt  Клаус_Шваб_Төртінші_индустриялық_революция.txt  М.Мағауин - Көк мұнар.txt  М_Булгаков_Мастер_және_Маргарита.txt  Маңғыстау ғашықтары.txt  Оралхан Бөкей - Қар қызы.txt  Оралхан Бөкей - Ұйқым келмейді.txt  Пауло Коэльо - Алхимик.txt  Педагогика.txt  Р.Кийосаки - Бай әке, кедей әке.txt  (+36 more)
notebooks/: data_exploration.ipynb  kaz_roberta_results.csv  mbert_results.csv  typos.ipynb
(+77 files in other folders)
